--- a/sliderule_dsi_inferential_statistics_exercise_1-checkpoint.ipynb
+++ b/sliderule_dsi_inferential_statistics_exercise_1-checkpoint.ipynb
@@ -62,6 +62,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Solutions Begin Here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 52,
    "metadata": {
     "collapsed": true
