--- a/sliderule_dsi_inferential_statistics_exercise_1-checkpoint.ipynb
+++ b/sliderule_dsi_inferential_statistics_exercise_1-checkpoint.ipynb
@@ -29,7 +29,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#Is the distribution of body temperatures normal?"
+   ]
   },
   {
    "cell_type": "code",
@@ -111,6 +113,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Is the true population mean really 98.6 degrees F?"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {
     "collapsed": false
@@ -180,6 +193,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#At what temperature should we consider someone's temperature to be \"abnormal\"?"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {
     "collapsed": false
@@ -224,6 +248,17 @@
     "me = 1.96*sigma_std_dev\n",
     "confidence_interval = [df.temperature.mean()-me,df.temperature.mean()+me]\n",
     "confidence_interval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#s there a significant difference between males and females in normal temperature?"
    ]
   },
   {
