--- a/pycon2015_tutorial322/questions.ipynb
+++ b/pycon2015_tutorial322/questions.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -1785,7 +1785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -1856,7 +1856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -1865,7 +1865,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.75\n"
+      "3.0\n"
      ]
     }
    ],
@@ -1906,7 +1906,7 @@
     "        \n",
     "reco = CollabPearsonReco()\n",
     "reco.learn()\n",
-    "print (reco.estimate(5,10))\n",
+    "print (reco.estimate(4568,5))\n",
     "#print ('RMSE for CollabPearsonReco: %s' % evaluate(reco.estimate))"
    ]
   },
@@ -2245,25 +2245,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "user_info = users.set_index('user_id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Int64Index([579805, 579979, 579607, 579421], dtype='int64')\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "\"Int64Index([579805, 579979, 579607, 579421], dtype='int64') not in index\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-16ead4a58cf6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maverage\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrating_sims\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrating\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mweights\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mratings_sims\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msim\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mcollab_pearson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-22-16ead4a58cf6>\u001b[0m in \u001b[0;36mcollab_pearson\u001b[0;34m(user_id, movie_id)\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mtheir_ids\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mratings_by_others\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mtheir_ids\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m     \u001b[0mtheir_profiles\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mall_users_profiles\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mtheir_ids\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m     \u001b[0muser_profile\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mall_users_profiles\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0muser_id\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0msims\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtheir_profiles\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0mprofile\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mpearson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprofile\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0muser_profile\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0maxis\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\Matt\\AppData\\Local\\Continuum\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1989\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mSeries\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mIndex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m   1990\u001b[0m             \u001b[1;31m# either boolean or fancy integer index\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1991\u001b[0;31m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_getitem_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1992\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mDataFrame\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m   1993\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_getitem_frame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\Matt\\AppData\\Local\\Continuum\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m_getitem_array\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   2033\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtake\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconvert\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m   2034\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2035\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mix\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_convert_to_indexer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2036\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtake\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconvert\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m   2037\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\Matt\\AppData\\Local\\Continuum\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py\u001b[0m in \u001b[0;36m_convert_to_indexer\u001b[0;34m(self, obj, axis, is_setter)\u001b[0m\n\u001b[1;32m   1212\u001b[0m                 \u001b[0mmask\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcheck\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m   1213\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0mmask\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0many\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1214\u001b[0;31m                     \u001b[1;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'%s not in index'\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mobjarr\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mmask\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1215\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m   1216\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0m_values_from_object\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: \"Int64Index([579805, 579979, 579607, 579421], dtype='int64') not in index\""
+     ]
+    }
+   ],
+   "source": [
+    "def collab_pearson(user_id, movie_id):\n",
+    "    \"\"\" Collaborative filtering using an implicit sim(u,u') based on gender. \"\"\"\n",
+    "    all_users_profiles = movielens_train.pivot_table('rating',index='movie_id',columns='user_id')\n",
+    "    user_condition = movielens_train.user_id != user_id\n",
+    "    movie_condition = movielens_train.movie_id == movie_id\n",
+    "    ratings_by_others = movielens_train.loc[user_condition & movie_condition]\n",
+    "    if ratings_by_others.empty: \n",
+    "        return 3.0\n",
+    "    \n",
+    "    ratings_by_others.set_index('user_id')\n",
+    "    their_ratings = ratings_by_others.rating\n",
+    "    \n",
+    "    their_ids = ratings_by_others.index\n",
+    "    print (their_ids)\n",
+    "    their_profiles = all_users_profiles[their_ids]\n",
+    "    user_profile = all_users_profiles[user_id]\n",
+    "    sims = their_profiles.apply(lambda profile:pearson(profile,user_profile),axis = 0)\n",
+    "    rating_sims = pd.DataFrame({'sim':sims,'rating':their_ratings})\n",
+    "    rating_sims = ratings_sims[rating_sims.sim>0]\n",
+    "\n",
+    "    if ratings_sims.empty:\n",
+    "        return their_ratings.mean()\n",
+    "    else:\n",
+    "        return np.average(rating_sims.rating,weights=ratings_sims.sim)\n",
+    "\n",
+    "print (collab_pearson(5,10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        user_id  movie_id  rating  timestamp gender  age  occupation    zip  \\\n",
+      "766708     2996         5       3  972767508      M   18           0  63011   \n",
+      "\n",
+      "                                     title  genres for_testing  \n",
+      "766708  Father of the Bride Part II (1995)  Comedy       False  \n",
+      "user_id   2996\n",
+      "movie_id      \n",
+      "1          NaN\n",
+      "2          NaN\n",
+      "4          NaN\n",
+      "5          3.0\n",
+      "6          NaN\n",
+      "7          NaN\n",
+      "10         NaN\n",
+      "11         NaN\n",
+      "12         NaN\n",
+      "13         NaN\n",
+      "15         NaN\n",
+      "16         NaN\n",
+      "17         NaN\n",
+      "18         NaN\n",
+      "19         NaN\n",
+      "20         NaN\n",
+      "21         NaN\n",
+      "24         NaN\n",
+      "25         NaN\n",
+      "28         NaN\n",
+      "29         NaN\n",
+      "31         NaN\n",
+      "32         NaN\n",
+      "34         NaN\n",
+      "36         NaN\n",
+      "38         NaN\n",
+      "39         NaN\n",
+      "40         NaN\n",
+      "41         NaN\n",
+      "42         NaN\n",
+      "...        ...\n",
+      "3871       NaN\n",
+      "3872       NaN\n",
+      "3873       NaN\n",
+      "3877       NaN\n",
+      "3882       NaN\n",
+      "3886       NaN\n",
+      "3893       NaN\n",
+      "3896       NaN\n",
+      "3897       NaN\n",
+      "3901       NaN\n",
+      "3903       NaN\n",
+      "3908       NaN\n",
+      "3909       NaN\n",
+      "3910       NaN\n",
+      "3916       NaN\n",
+      "3917       NaN\n",
+      "3920       NaN\n",
+      "3921       NaN\n",
+      "3925       NaN\n",
+      "3927       NaN\n",
+      "3928       NaN\n",
+      "3929       NaN\n",
+      "3930       NaN\n",
+      "3932       NaN\n",
+      "3943       NaN\n",
+      "3945       NaN\n",
+      "3947       NaN\n",
+      "3948       NaN\n",
+      "3949       NaN\n",
+      "3952       NaN\n",
+      "\n",
+      "[1934 rows x 1 columns]\n"
+     ]
+    },
+    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rating</th>\n",
+       "      <th>sim</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Int64Index([766786, 766708], dtype='int64')"
+       "Empty DataFrame\n",
+       "Columns: [rating, sim]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "their_ids = ratings_by_others.index\n",
-    "their_ids"
+    "#all_user_profiles =mov.pivot(on movie,col=user)\n",
+    "#find other ratings\n",
+    "#ratins_of_others= movi(user_id!=user &move=move_id)\n",
+    "#ratings_of_others.set_index(user_id)\n",
+    "#user_prifle = all_user_profiles([user_id])\n",
+    "#their_id=ratings_of_others.index\n",
+    "#their_rating=rating_of_others.rating\n",
+    "#theri_profile = all_user_profiles(their_id)\n",
+    "#sim = sim(user_profile,theri_profiel)\n",
+    "#datframe(sim,their_rating)\n",
+    "#return np.average(their_rating,weright= sim)\n",
+    "\n",
+    "\n",
+    "all_users_profiles = movielens_train.pivot_table('rating',index='movie_id',columns='user_id')\n",
+    "user_condition = movielens_train.user_id != 4568\n",
+    "movie_condition = movielens_train.movie_id == 5\n",
+    "ratings_by_others = movielens_train.loc[user_condition & movie_condition]\n",
+    "ratings_by_others.set_index('user_id')\n",
+    "their_ratings = ratings_by_others.rating\n",
+    "their_ids = ratings_by_others.user_id\n",
+    "print (ratings_by_others)\n",
+    "user_id=4568\n",
+    "user_profile = all_users_profiles[user_id]\n",
+    "#print(all_users_profiles.head())\n",
+    "#user_profile\n",
+    "their_profiles = all_users_profiles[their_ids]\n",
+    "print(their_profiles)\n",
+    "user_profile = all_users_profiles[user_id]\n",
+    "sims = their_profiles.apply(lambda profile:pearson(profile,user_profile),axis = 0)\n",
+    "rating_sims = pd.DataFrame({'sim':sims,'rating':their_ratings})\n",
+    "rating_sims = rating_sims[rating_sims.sim>0]\n",
+    "rating_sims\n",
+    "#print(np.average(rating_sims.rating,weights=rating_sims.sim))"
    ]
   }
  ],
