changing data directory

--- a/EstimatingUberTraffic/GenerateBagOfWords.ipynb
+++ b/EstimatingUberTraffic/GenerateBagOfWords.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -11,7 +11,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('F', 243), ('NC', 118), ('#job', 116), ('#ClaytonNC', 114), ('#CarolinaWx', 106), ('Gibbous', 97), ('mph', 97), ('Waning', 97), ('inHg', 97), ('BP', 97), ('Dp', 97), ('Mn', 97), ('RH', 97), ('Dry', 97), ('#Hiring', 75)]\n"
+      "[('F', 262), ('#ClaytonNC', 130), ('NC', 128), ('#job', 122), ('#CarolinaWx', 121), ('RH', 104), ('Mn', 104), ('Waning', 104), ('Dp', 104), ('inHg', 104), ('Dry', 104), ('Gibbous', 104), ('BP', 104), ('mph', 102), ('#Hiring', 76)]\n"
      ]
     }
    ],
@@ -78,7 +78,7 @@
     "count_all = Counter()\n",
     "\n",
     "#twitter_dataset = pd.read_table('tweets_streamed_dataset.txt', index_col=None)\n",
-    "twitter_dataset = pd.read_table('sample_streamed.txt', index_col=None)\n",
+    "twitter_dataset = pd.read_table('data/sample_streamed.txt', index_col=None)\n",
     "\n",
     "for tweet in twitter_dataset.tweet_text:\n",
     "    tweet = normalize('NFKD', tweet).encode('ascii','ignore').decode('unicode_escape')\n",
@@ -96,6 +96,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [conda root]",
    "language": "python",
