adding latest files

--- a/EstimatingUberTraffic/GenerateBagOfWords.ipynb
+++ b/EstimatingUberTraffic/GenerateBagOfWords.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -11,7 +11,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('New', 1784), ('n', 1638), ('#job', 905), ('Incident', 890), ('ude', 798), ('th', 763), ('#Hiring', 755), ('Street', 685), ('0', 640), ('udc', 624), ('#CareerArc', 602), ('Avenue', 585), ('Exit', 549), (\"I'm\", 549), ('Update', 507), ('Construction', 481), ('4', 472), ('f', 466), ('udf', 456), ('udd', 430), ('latest', 428), ('amp', 425), ('Cleared', 418), ('Station', 383), ('work', 378), ('ufe', 357), ('This', 356), (\"We're\", 334), ('#hiring', 327), ('Brooklyn', 320), ('opening', 320), ('great', 309), ('8', 299), ('#Job', 284), ('#nyc', 283), ('Just', 278), ('5', 274), ('WB', 263), ('#Jobs', 260), ('EB', 255), ('fit', 250), ('25', 248), ('Both', 248), ('2', 247), ('East', 243), ('Park', 243), ('directions', 240), ('Can', 237), ('anyone', 230), ('NB', 227), ('recommend', 227), ('Click', 222), ('SB', 219), ('1', 218), ('posted', 217), ('Want', 217), ('apply', 216), ('See', 215), ('3', 205), ('u2764', 201), ('photo', 201), ('day', 199), ('e', 194), ('6', 193), ('9', 182), ('#t1d', 179), ('#diabetes', 179), ('#type1diabetes', 179), ('c', 179), ('#diabetic', 179), ('7', 176), ('u30fb', 175), ('NJ', 173), ('Boulevard', 170), ('Bridge', 167), ('could', 160), ('If', 157), ('Queens', 155), ('17', 149), ('Central', 148), ('Broadway', 145), ('ud83e', 144), ('today', 142), ('back', 139), ('Side', 138), ('looking', 137), ('#Hospitality', 135), ('Square', 135), ('City', 135), ('night', 134), (\"you're\", 133), ('Interested', 131), ('check', 128), ('new', 127), ('time', 127), ('West', 125), ('My', 125), ('one', 125), ('Bronx', 123), ('St', 120), ('go', 119), ('might', 118), ('#I278', 118), ('US', 118), ('We', 116), ('02', 115), ('Join', 115), ('team', 115), (':\\\\', 114), ('Read', 113), ('b', 113), ('View', 112), ('click', 112), ('#newyork', 112), ('details', 111), ('love', 110), (\"It's\", 109), ('Center', 106), ('u2022', 104), ('Island', 101), ('udffb', 101), ('show', 100), ('Feb', 99), ('18', 98), ('Dental', 97), ('gt', 94), ('#traffic', 94), ('u2013', 93), ('Manager', 92), ('Ave', 91), ('get', 91), ('2017', 91), ('Bar', 91), ('morning', 90), ('udcf', 90), ('de', 90), ('B', 90), ('last', 89), ('You', 88), ('w', 88), ('NEW', 88), ('Road', 87), ('good', 87), ('10', 86), ('udffd', 86), ('udfa', 86), ('tonight', 84), ('31', 82), ('TONIGHT', 81), ('AM', 81), ('Friday', 81), ('Ramp', 81), ('Day', 81), ('In', 80), ('Expressway', 80), ('Museum', 80), ('Bad', 80), ('#Veterans', 79), ('#Sales', 79), ('E', 78), ('Accident', 77), ('#Retail', 77), ('W', 74), ('nd', 74), ('beautiful', 74), ('Teeth', 73), ('Parkway', 73), ('#newyorkcity', 73), ('Grand', 73), ('weekend', 72), ('know', 72), (\"it's\", 72), ('14', 71), ('uddf', 71), ('For', 70), ('stop', 70), ('11', 70), ('When', 70), ('THE', 69), ('Terminal', 69), ('Long', 68), ('40', 68), ('Cloudy', 68), ('see', 68), ('week', 68), ('#GrandCentralParkway', 68), ('got', 67), ('udffc', 67), ('#Repost', 66), ('traffic', 66), ('Saturday', 66), ('Happy', 66), ('Art', 66), ('95', 66), ('udca', 66), ('FREE', 65), ('February', 65), ('video', 65), ('So', 64), ('uddfd', 64)]\n"
+      "[(('ufe', '0', 'f'), 338), (('n', 'n', 'n'), 308), (('Can', 'recommend', 'anyone'), 230), (('Just', 'posted', 'photo'), 209), (('Construction', 'Both', 'directions'), 170), (('could', 'great', 'fit'), 131), (('This', 'could', 'great'), 131), (('udd', '25', 'udd'), 124), (('25', 'udd', '25'), 123), (('This', 'might', 'great'), 119), (('might', 'great', 'fit'), 119), (('If', \"you're\", 'looking'), 113), ((\"you're\", 'looking', 'work'), 113), ((\"We're\", 'Read', 'latest'), 110), (('Read', 'latest', 'opening'), 110), ((\"We're\", 'Click', 'apply'), 109), (('u2764', 'ufe', '0'), 107), (('View', 'latest', 'opening'), 104), (('team', 'See', 'latest'), 102), (('See', 'latest', 'opening'), 102), (('Interested', 'This', 'could'), 101), ((\"We're\", 'Click', 'details'), 94), (('th', 'Street', 'Station'), 88), (('Update', 'Construction', 'Both'), 87), (('latest', 'click', 'apply'), 86), (('See', 'latest', 'click'), 86), (('Incident', 'WB', 'Exit'), 85), (('looking', 'work', 'check'), 84), (('work', 'View', 'latest'), 79), (('Want', 'work', 'View'), 79), (('u30fb', 'u30fb', 'u30fb'), 78), (('n', 'u30fb', 'u30fb'), 76), (('n', 'u2022', 'n'), 73), (('Incident', 'Both', 'directions'), 66), (('Update', 'Incident', 'WB'), 63), (('ude', '4', 'c'), 62), (('ude', '02', 'ude'), 61), (('ude', '4', 'f'), 58), (('u2022', 'n', 'u2022'), 57), (('Incident', 'EB', 'Exit'), 56), (('02', 'ude', '02'), 55), (('Tooth', 'Abscess', 'Relief'), 54), (('ude', '0', 'e'), 53), (('New', 'Lots', 'Avenue'), 52), (('Fri', 'Feb', '17'), 52), (('Feb', '17', 'th'), 52), (('th', 'AM', 'Forecast'), 51), (('AM', 'Forecast', 'TODAY'), 51), (('17', 'th', 'AM'), 51), (('Port', 'Authority', 'Bus'), 50), (('uddfa', 'uddf', '8'), 50), (('Cleared', 'Incident', 'EB'), 49), (('Authority', 'Bus', 'Terminal'), 49), (('5', 'th', 'Avenue'), 49), (('udc', '4', 'f'), 48), (('n', ':\\\\', 'n'), 48), (('Update', 'Incident', 'EB'), 47), (('Times', 'Square', 'New'), 47), (('stop', 'go', 'traffic'), 46), (('Cleared', 'Incident', 'NB'), 46), (('go', 'traffic', 'back'), 45), (('495', 'Long', 'Island'), 45), (('Square', 'New', 'City'), 44), (('Cleared', 'Construction', 'Both'), 43), (('125', 'th', 'Street'), 43), (('Cleared', 'Incident', 'WB'), 41), (('TONIGHT', 'Partly', 'Cloudy'), 41), (('Partly', 'Cloudy', 'Lo'), 41), (('Incident', 'Port', 'Authority'), 41), (('Long', 'Island', 'Expressway'), 39), (('Just', 'posted', 'video'), 38), (('Rem', 'u00e9dios', 'Para'), 38), (('C', 'u00e1seos', 'Caseums'), 38), (('ude', '0', 'ude'), 38), (('u00e9dios', 'Para', 'C'), 38), (('Para', 'C', 'u00e1seos'), 38), ((':\\\\', 'n', ':\\\\'), 37), (('Both', 'directions', 'Exit'), 37), (('Archer', 'Avenue', 'Sutphin'), 36), (('Avenue', 'Sutphin', 'Boulevard'), 36), (('From', 'Dental', 'Disease'), 36), (('Ebook', 'Global', 'Edition'), 36), (('Mammoth', 'Ebook', 'Global'), 36), (('Dental', 'Mammoth', 'Ebook'), 36), (('Freedom', 'From', 'Dental'), 36), (('168', 'th', 'Street'), 35), (('New', 'Penn', 'Station'), 35), (('Brand', 'New', 'With'), 35), (('u2600', 'ufe', '0'), 35), (('Incident', 'SB', 'Exit'), 35), (('Update', 'Incident', 'SB'), 35), (('Forever', 'Brand', 'New'), 35), (('Teeth', 'Whitening', '4'), 34), (('57', 'th', 'Street'), 34), (('Whitening', '4', 'You'), 34), (('Mandibula', 'Sana', 'Como'), 34), (('Cleared', 'Incident', 'SB'), 34), (('Cloudy', 'Lo', '31'), 33), (('Update', 'Incident', 'New'), 33), (('John', 'F', 'Kennedy'), 33)]\n"
      ]
     }
    ],
@@ -24,6 +24,7 @@
     "from collections import Counter\n",
     "from nltk.corpus import stopwords\n",
     "import string\n",
+    "from nltk import bigrams\n",
     "from nltk import trigrams\n",
     "import json\n",
     "import pandas as pd\n",
@@ -85,15 +86,16 @@
     "    #tweet = normalize('NFKD', tweet).encode('ascii','ignore').decode('unicode_escape')\n",
     "    tweet = normalize('NFKD', tweet)\n",
     "    terms_stop = [term for term in preprocess(tweet) if term not in stop and not term.startswith(('#', '@')) and not emoji_pattern.search(term)]\n",
-    "    #terms_trigram = trigrams(terms_stop)\n",
+    "    #terms_bigram = bigrams(terms_stop)\n",
+    "    terms_trigram = trigrams(terms_stop)\n",
     "    #terms_hash = [term for term in preprocess(tweet1) if term.startswith('#')]\n",
-    "    terms_all = [term for term in preprocess(tweet) if term not in stop]\n",
-    "    #count_all.update(terms_trigram)\n",
+    "    #terms_all = [term for term in preprocess(tweet) if term not in stop]\n",
+    "    count_all.update(terms_trigram)\n",
     "    #count_all.update(terms_hash)\n",
-    "    count_all.update(terms_all)\n",
+    "    #count_all.update(terms_all)\n",
     "    \n",
     "\n",
-    "print(count_all.most_common(200))\n",
+    "print(count_all.most_common(100))\n",
     "#twitter_dataset"
    ]
   }
